5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1806_2108.log
== TEST (2019-06-20 14:04:24) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		vs[j] = "p"
	else:
		vs[j] = ve[j]
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:05:37) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		vs = vs + "p"
	else:
		vs = vs + ve[j]
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:08:44) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs = vs + ve[j]
	else:
		vs[j] = "p"
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:10:21) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs = vs + ve[j]
	else:
		vs.replace(ve[j],"p")
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:10:33) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs = vs + ve[j]
	else:
		vs.replace(ve[j],"p")
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:11:43) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs[j] = vs[j] + ve[j]
	else:
		vs.replace(ve[j],"p")
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:11:54) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs[j] = vs[j] + ve[j]
	else:
		vs.replace(ve[j],"p")
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:13:02) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs = vs + ve[j]
	else:
		vs.replace(ve[j],"p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:13:59) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs = vs + ve[j]
	else:
		vs.replace(vs[j],"p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:14:34) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" or ve[j] == "e" or ve[j] == "i" or ve[j] == "o" or ve[j] == "u"):
		vs = vs + ve[j]
	else:
		vs  = vs.replace(ve[j],"p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:16:54) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] =! "a" or ve[j] =! "e" or ve[j] =! "i" or ve[j] =! "o" or ve[j] =! "u"):
		vs = ve.raplace(ve[j], "p")
	else:
		vs  = vs + ve[j]
	j = j+1
print(vs)	
	
-- ERROR:
File "XXXX", line 7
    if(ve[j] =! "a" or ve[j] =! "e" or ve[j] =! "i" or ve[j] =! "o" or ve[j] =! "u"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:17:21) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		vs = ve.raplace(ve[j], "p")
	else:
		vs  = vs + ve[j]
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:17:59) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	else:
		vs  = vs + ve[j]
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:20:13) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	else:
		vs  = vs + ve[j]
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:22:55) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" and ve[j] == "e" and ve[j] == "i" and ve[j] == "o" and ve[j] == "u"):
		vs  = vs + ve[j]
	else:
		vs = vs + ve.replace(ve[j], "p")
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:24:06) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a" and ve[j] == "e" and ve[j] == "i" and ve[j] == "o" and ve[j] == "u"):
		vs  = vs + ve[j]
	else:
		vs = ve.replace(ve[j], "p")
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:27:56) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a"):
		vs  = vs + ve[j]
	elif(ve[j] == "e"):
		vs  = vs + ve[j]
	elif(ve[j] == "i"):
		vs  = vs + ve[j]
	elif(ve[j] == "o"):
		vs  = vs + ve[j]
	elif(ve[j] == "u"):
		vs  = vs + ve[j]
	else:
		p = ve.replace(ve[j], "p")
		vs = vs+p
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:29:42) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a"):
		vs  = vs + ve[j]
	elif(ve[j] == "e"):
		vs  = vs + ve[j]
	elif(ve[j] == "i"):
		vs  = vs + ve[j]
	elif(ve[j] == "o"):
		vs  = vs + ve[j]
	elif(ve[j] == "u"):
		vs  = vs + ve[j]
	else:
		p = ve.replace(ve[j], "p")
		vs = vs+p
	j = j+1
	print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:31:37) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a"):
		vs[j]  = ve[j]
	elif(ve[j] == "e"):
		vs[j]  = ve[j]
	elif(ve[j] == "i"):
		vs[j] = ve[j]
	elif(ve[j] == "o"):
		vs[j]  = ve[j]
	elif(ve[j] == "u"):
		vs[j] = ve[j]
	else:
		p = ve.replace(ve[j], "p")
		vs[j] = p
	j = j+1
	print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:32:15) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] == "a"):
		vs[j]  = ve[j]
	elif(ve[j] == "e"):
		vs[j]  = ve[j]
	elif(ve[j] == "i"):
		vs[j] = ve[j]
	elif(ve[j] == "o"):
		vs[j]  = ve[j]
	elif(ve[j] == "u"):
		vs[j] = ve[j]
	j = j+1
	print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:43:59) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		ve.replace(ve[j], "p")
	j = j+1
print(ve)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:44:35) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(ve)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:45:29) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(ve)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:47:05) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:47:21) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" or ve[j] != "e" or ve[j] != "i" or ve[j] != "o" or ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:47:59) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:48:07) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:48:20) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:48:53) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = vs + ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:49:13) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = vs + ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-20 14:49:53) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs = ""
j = 0
while(j < len(ve)):
	if(ve[j] != "a" and ve[j] != "e" and ve[j] != "i" and ve[j] != "o" and ve[j] != "u"):
		vs = vs + ve.replace(ve[j], "p")
	print(ve[j])
	j = j+1
	print(vs)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 21:51:38) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
for i in range(len(ve)):
	if(i == "a" or i == "e" or i == "i" or i == "o" or i == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replave(ve[i], "p")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 21:52:01) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
for i in range(len(ve)):
	if(i == "a" or i == "e" or i == "i" or i == "o" or i == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:05:55) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
for i in range(len(ve)):
	if(i == "a" or i == "e" or i == "i" or i == "o" or i == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:06:06) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
for i in range(len(ve)):
	if(i == "a" or i == "e" or i == "i" or i == "o" or i == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:06:17) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
for i in range(len(ve)):
	if(i == "a" or i == "e" or i == "i" or i == "o" or i == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:10:00) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i = 0
for i < len(ve):
	if(ve[i] == "a" or ve[i] == "e" or ve[i] == "i" or ve[i] == "o" or ve[i] == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	
-- ERROR:
File "XXXX", line 5
    for i < len(ve):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:10:57) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i = 0
while(i < len(ve)):
	if(ve[i] == "a" or ve[i] == "e" or ve[i] == "i" or ve[i] == "o" or ve[i] == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:11:43) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i = 0
while(i < len(ve)):
	if(ve[i] == "a" or ve[i] == "e" or ve[i] == "i" or ve[i] == "o" or ve[i] == "u"):
		ve[i] = ve[i]
	else:
		ve = ve[i].replace(ve[i], "p")
	i = i+1	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:13:23) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs =""
i = 0
while(i < len(ve)):
	if(ve[i] == "a" or ve[i] == "e" or ve[i] == "i" or ve[i] == "o" or ve[i] == "u"):
		vs[i] = ve[i]
	else:
		vs[i] = ve[i].replace(ve[i], "p")
	i = i+1	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:14:15) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
vs =""
i = 0
while(i < len(ve)):
	if(ve[i] == "a" or ve[i] == "e" or ve[i] == "i" or ve[i] == "o" or ve[i] == "u"):
		vs[i] = ve[i]
	else:
		ve[i] = ve[i].replace(ve[i], "p")
		vs = ve[i]
	i = i+1	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:20:07) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

for i != "a" or i != "e" or i != "i" or i != "o" or i != "u":
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
File "XXXX", line 5
    for i != "a" or i != "e" or i != "i" or i != "o" or i != "u":
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:23:31) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

for i in ve:
	if (i != "a" or i != "e" or i != "i" or i != "o" or i != "u"):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:17) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

for ve[i] in len(ve):
	if (i != "a" or i != "e" or i != "i" or i != "o" or i != "u"):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:24:42) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

for ve[i] in range(len(ve)):
	if (i != "a" or i != "e" or i != "i" or i != "o" or i != "u"):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:25:15) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()

for ve[i] in range(len(ve)):
	if (ve[i] != "a" or ve[i] != "e" or ve[i] != "i" or ve[i] != "o" or ve[i] != "u"):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:25:47) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for ve[i] in range(len(ve)):
	if (ve[i] != "a" or ve[i] != "e" or ve[i] != "i" or ve[i] != "o" or ve[i] != "u"):
		ve = ve.replace(ve[i],"p")
	i = i+1	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:26:30) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if (ve[i] != "a" or ve[i] != "e" or ve[i] != "i" or ve[i] != "o" or ve[i] != "u"):
		ve = ve.replace(ve[i],"p")
	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:26:49) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if (ve[i] != "a" or ve[i] != "e" or ve[i] != "i" or ve[i] != "o" or ve[i] != "u"):
		ve = ve.replace(ve[i],"p")
	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:27:23) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if (ve[i] != "a" or ve[i] != "e" or ve[i] != "i" or ve[i] != "o" or ve[i] != "u"):
		print(ve[i])
		ve = ve.replace(ve[i],"p")
	
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:28:03) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if (ve[i] != "a" or ve[i] != "e" or ve[i] != "i" or ve[i] != "o" or ve[i] != "u"):
		print(ve[i])
		#ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:29:02) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u"):
		print(ve[i])
		#ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:29:20) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u"):
		print(ve[i])
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:30:06) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u"):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:31:20) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u" and != " "):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
File "XXXX", line 6
    if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u" and != " "):
                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 22:31:59) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u" and ve[i] != " "):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 22:32:15) 
-- CODE:
from numpy import *
ve = input("Digite uma palavra: ")
ve = ve.lower()
i=0
for i in range(len(ve)):
	if(ve[i] != "a" and ve[i] != "e" and ve[i] != "i" and ve[i] != "o" and ve[i] != "u" and ve[i] != " "):
		ve = ve.replace(ve[i],"p")
print(ve)	
-- EXECUTION TIME:
0.942966
-- TEST CASE 1:
---- input:
teste
---- correct output:
peppe
---- user output:
peppe
-- TEST CASE 2:
---- input:
flor
---- correct output:
ppop
---- user output:
ppop
-- TEST CASE 3:
---- input:
abacaxi
---- correct output:
apapapi
---- user output:
apapapi
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
